objects/BB_B__c.object
<CustomObject>
    <fields>
        <fullName>BatchSize__c</fullName>
        <label>BatchSize</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X__c</fullName>
        <label>X</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Y__c</fullName>
        <label>Y</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>BB_B</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BB_Bs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>